ZGC: Implementation of nmethod entry barriers for AArch64